--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,6 +1,4 @@
-<tag attr="{.func}""> парсить в this.func
-
-проверять существует ли метод this.func {.func}
+проверять существует ли метод this.func {.func} ----> для IF и FOREACH
 
 в проверке обработчиков если не найден обработчик, искать в родительских классах
 
