--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,8 +1,4 @@
-проверять существует ли метод this.func {.func} ----> для IF и FOREACH
-
-в проверке обработчиков если не найден обработчик, искать в родительских классах
-
-{&aaa} вместо {&args['aaa']}
+проверить FOREACH
 
 {let a = 545}
 
