level, component,  template code parser

--- a/www/todo.txt
+++ b/www/todo.txt
@@ -2,8 +2,6 @@
 
 запилить тестовую сборку
 
-проверить FOREACH
-
 неверный вывод ошибок в шаблонах include (не определен класс)
 
 {from &i = 10 to 20 step 1}
@@ -13,3 +11,5 @@
 внедрить {ifempty} внутрь FOREACH
 
 косяк с let, когда он находится вне тегов
+
+запилить геттеры и сеттеры
