--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,8 +1,4 @@
-﻿не включать код неиспользуемых хелперов в сборку
-
-запилить тестовую сборку
-
-неверный вывод ошибок в шаблонах include (не определен класс)
+﻿неверный вывод ошибок в шаблонах include (не определен класс)
 
 {from &i = 10 to 20 step 1}
 
@@ -13,3 +9,17 @@
 косяк с let, когда он находится вне тегов
 
 запилить геттеры и сеттеры
+
+Controllers.get()
+
+**~var = (!!~var?~var:'')
+
+User.aaa()
+
+Dictionary.aaa()
+
+5*#data -> error
+
+5*#data['aaa'] -> not error
+
+$func(), ~func()
