utils, my utils, template code parser

--- a/www/todo.txt
+++ b/www/todo.txt
@@ -36,3 +36,9 @@ $func(), ~func()
 <div>
 	{~cityTempl->}
 </div>
+
+^comp - валидировать есть ли в шаблоне компонент с таким id
+
+запилить JS константы
+
+ternary => (a?b:c)
