--- a/www/todo.txt
+++ b/www/todo.txt
@@ -8,7 +8,9 @@
 
 запилить геттеры и сеттеры
 
-**~var = (!!~var?~var:'')
+?~var = (!!~var?~var:'')
+? ~var = (!!~var?' '+~var:'')
+?~var:~b = (!!~var?~var:~b)
 
 User.aaa()
 
@@ -42,3 +44,7 @@ $func(), ~func()
 запилить JS константы
 
 ternary => (a?b:c)
+
+запретить вызвать например .render() из шаблона 
+
+Ошибка вызова метода df класса DataTable из его шаблона. Метод не найден -> выводить код элемента
