--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,4 +1,6 @@
-﻿неверный вывод ошибок в шаблонах include (не определен класс)
+﻿arg-className="frameless" в шаблоне Keywords не обфусцируется
+
+неверный вывод ошибок в шаблонах include (не определен класс)
 
 {from &i = 10 to 20 step 1}
 
