--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,4 +1,6 @@
-﻿u00A0 на главной
+﻿обфускация названий реактивных пропсов
+
+prototype.g --- запретить переопределение function g() {}
 
 файлы .ext 
 
@@ -29,8 +31,6 @@ delay () {
 }
 
 {$:var} переменные Globals
-
-<div onClick=""> валидировать on(...) не менее 3-х символов
 
 onClick=":stop"
 
