updaters, this.set

--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,4 +1,6 @@
-﻿обфускация названий реактивных пропсов
+﻿class="*" class="*title" - имя класса элемента по названию класса компонента
+
+обфускация названий реактивных пропсов
 
 prototype.g --- запретить переопределение function g() {}
 
