foreach ifempty, ifempty and else location validation

--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,24 +1,41 @@
-﻿class="*" class="*title" - имя класса элемента по названию класса компонента
+﻿------------------------------
+
+class="*" class="*title" - имя класса элемента по названию класса компонента
+
+------------------------------
 
 обфускация названий реактивных пропсов
 
+------------------------------
+
 prototype.g --- запретить переопределение function g() {}
 
-файлы .ext 
+------------------------------
 
+файлы .ext 
 User.ext - доп методы для классов 
+
+------------------------------
 
 тип класса processor 
 
+------------------------------
+
 $ от case переходят в switch и if 
+
+------------------------------
 
 {use [1,'34543543']} в шаблонах
 
-{foreach right}
+------------------------------
 
 {$a:Corrector}
 
+------------------------------
+
 {loading} ... {then} ... {/then} => {if !$loaded} ... {else} ... {/if}
+
+------------------------------
 
 each () {
 	each () {
@@ -26,52 +43,91 @@ each () {
 	}
 }
 
+------------------------------
+
 delay () {
 	delay () {
 
 	}
 }
 
+------------------------------
+
 {$:var} переменные Globals
+
+------------------------------
 
 onClick=":stop"
 
+------------------------------
+
 onClick=":prevent"
+
+------------------------------
 
 {.template .a as .b}  this.setState('b');
 
+------------------------------
+
 arg-className="frameless" в шаблоне Keywords не обфусцируется
+
+------------------------------
 
 неверный вывод ошибок в шаблонах include (не определен класс)
 
+------------------------------
+
 {from &i = 10 to 20 step 1}
+
+------------------------------
 
 внедрить {ifempty} внутрь FOREACH
 
+------------------------------
+
 запилить геттеры и сеттеры
+
+------------------------------
 
 ?~var = (!!~var?~var:'')
 ? ~var = (!!~var?' '+~var:'')
 ?~var:~b = (!!~var?~var:~b)
 
+------------------------------
+
 User.aaa()
+
+------------------------------
 
 Dictionary.aaa()
 
-5*#data -> error
+------------------------------
 
+5*#data -> error
 5*#data['aaa'] -> not error
+
+------------------------------
 
 $func(), ~func()
 
+------------------------------
+
 реализовать кастомные валидаторы
 
+------------------------------
+
 <component childClass="{class:Favorites}">
+
+------------------------------
 
 <component class="DataTableTabPanel" userName="{user:name}">
 <component class="DataTableTabPanel" userName="{user:isAutorized()}">
 
+------------------------------
+
 <component class="DataTableTabPanel" city="{dict:cities[22]}">
+
+------------------------------
 
 <component class="DataTableTabPanel" cityTempl="{template:city}">
 <component class="DataTableTabPanel" cityTempl="{template:#city}"> by key
@@ -79,12 +135,34 @@ $func(), ~func()
 	{~cityTempl->}
 </div>
 
+------------------------------
+
 ^comp - валидировать есть ли в шаблоне компонент с таким id
+
+------------------------------
 
 запилить JS константы
 
+------------------------------
+
 запретить вызвать например .render() из шаблона 
+
+------------------------------
 
 Ошибка вызова метода df класса DataTable из его шаблона. Метод не найден -> выводить код элемента
 
+------------------------------
+
 запилить реактивный let
+
+-----------------------------
+ошибка тегов на разных уровнях 
+
+<div>
+	<span>
+</div>
+<div>
+	</span>
+</div>
+
+----------------------------
