--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,5 +1,29 @@
 ﻿------------------------------
 
+ошибка если else/ifempty в начале / конце шаблона (вне тегов)
+
+------------------------------
+
+проверить Decliner/Dates/... на включаемость / исключаемость когда используется / не используется
+
+------------------------------
+
+{decline ~quantity 'item'}
+
+------------------------------
+
+{random 2}
+	<div>1</div>
+	<div>2</div>
+	<div>3</div>
+{/random}
+
+------------------------------
+	
+foreach random
+
+------------------------------
+
 class="*" class="*title" - имя класса элемента по названию класса компонента
 
 ------------------------------
