foreach right, random

--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,5 +1,11 @@
 ﻿------------------------------
 
+{for &a = 3 to &a.length step 6}
+
+{/for}
+
+------------------------------
+
 ошибка если else/ifempty в начале / конце шаблона (вне тегов)
 
 ------------------------------
