controllers, loading, onload

--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,5 +1,13 @@
 ﻿------------------------------
 
+проверять что actions контроллера не совпадали с именами методов
+
+------------------------------
+
+переработать контроллеры, ввести понятие private controller
+
+------------------------------
+
 {for &a = 3 to &a.length step 6}
 
 {/for}
@@ -63,26 +71,6 @@ $ от case переходят в switch и if
 
 ------------------------------
 
-{loading} ... {then} ... {/then} => {if !$loaded} ... {else} ... {/if}
-
-------------------------------
-
-each () {
-	each () {
-
-	}
-}
-
-------------------------------
-
-delay () {
-	delay () {
-
-	}
-}
-
-------------------------------
-
 {$:var} переменные Globals
 
 ------------------------------
@@ -108,10 +96,6 @@ arg-className="frameless" в шаблоне Keywords не обфусцирует
 ------------------------------
 
 {from &i = 10 to 20 step 1}
-
-------------------------------
-
-внедрить {ifempty} внутрь FOREACH
 
 ------------------------------
 
