--- a/www/todo.txt
+++ b/www/todo.txt
@@ -22,10 +22,6 @@
 
 ------------------------------
 
-prototype.g --- запретить переопределение function g() {}
-
-------------------------------
-
 файлы .ext 
 User.ext - доп методы для классов 
 
@@ -48,14 +44,6 @@ $ от case переходят в switch и if
 ------------------------------
 
 {$:var} переменные Globals
-
-------------------------------
-
-onClick=":stop"
-
-------------------------------
-
-onClick=":prevent"
 
 ------------------------------
 
@@ -127,15 +115,7 @@ $func(), ~func()
 
 ------------------------------
 
-^comp - валидировать есть ли в шаблоне компонент с таким id
-
-------------------------------
-
 запилить JS константы
-
-------------------------------
-
-запретить вызвать например .render() из шаблона 
 
 ------------------------------
 
@@ -144,5 +124,9 @@ $func(), ~func()
 ------------------------------
 
 запилить реактивный let
+
+-----------------------------
+
+проверить класс builder.checker
 
 -----------------------------
