core error fixed

--- a/www/todo.txt
+++ b/www/todo.txt
@@ -1,5 +1,16 @@
 ﻿------------------------------
 
+нельзя вызвать контроллер из класса если он не указан в initial controllers
+
+------------------------------
+
+initial interval = {
+	'delay': 1000,
+	'callback': this.onInterval
+}
+
+------------------------------
+
 {for &a = 3 to &a.length step 6}
 
 {/for}
