--- a/www/bushstas/todo.txt
+++ b/www/bushstas/todo.txt
@@ -139,3 +139,27 @@ $func(), ~func()
 controller action 'before': Corrector, 'after': Corrector
 
 -----------------------------
+
+
+
+$items[0] = 1;
+$items[1].name = 'Name';
+$items.name[0] = 3;
+
+$items.unset(0, 4, 7);
+$items.remove('key');
+
+
+$items.push(1);
+$items.concat([1,3]);
+
+
+
+$index++;
+$index--;
+$index += 4;
+$index -= 4;
+$index *= 4;
+$index /= 4;
+
+$isValid.toggle();
