--- a/www/bushstas/todo.txt
+++ b/www/bushstas/todo.txt
@@ -42,14 +42,6 @@ User.ext - доп методы для классов
 
 ------------------------------
 
-$ от case переходят в switch и if 
-
-------------------------------
-
-{use [1,'34543543']} в шаблонах
-
-------------------------------
-
 {$a:Corrector}
 
 ------------------------------
@@ -63,10 +55,6 @@ arg-className="frameless" в шаблоне Keywords не обфусцирует
 ------------------------------
 
 неверный вывод ошибок в шаблонах include (не определен класс)
-
-------------------------------
-
-{from &i = 10 to 20 step 1}
 
 ------------------------------
 
@@ -84,7 +72,7 @@ User.aaa()
 
 ------------------------------
 
-Dictionary.aaa()
+Dictionary.cities
 
 ------------------------------
 
@@ -101,19 +89,6 @@ $func(), ~func()
 
 ------------------------------
 
-<component childClass="{class:Favorites}">
-
-------------------------------
-
-<component class="DataTableTabPanel" userName="{user:name}">
-<component class="DataTableTabPanel" userName="{user:isAutorized()}">
-
-------------------------------
-
-<component class="DataTableTabPanel" city="{dict:cities[22]}">
-
-------------------------------
-
 <component class="A" t="{%caption}">
 
 <component class="A" t="{%main}"> нельзя передавать main / не может передавать сам себя
@@ -127,14 +102,6 @@ $func(), ~func()
 Ошибка вызова метода df класса DataTable из его шаблона. Метод не найден -> выводить код элемента
 
 ------------------------------
-
-запилить реактивный let
-
------------------------------
-
-проверить класс builder.checker
-
------------------------------
 
 controller action 'before': Corrector, 'after': Corrector
 
@@ -163,3 +130,19 @@ $index *= 4;
 $index /= 4;
 
 $isValid.toggle();
+
+
+---------------------------------------
+
+зарефакторить
+ControllersParser.hasComponentMethod
+
+------------------------------
+
+обфускация __AC.favorites.get до __AC[0]
+
+------------------------------
+
+обфускация 'Component' до 'A'
+
+------------------------------
